--- a/css/top.css
+++ b/css/top.css
@@ -1,13 +1,22 @@
 /* 共通 */
-.padding {
-    padding-left: 25px;
-    padding-right: 25px;
-}
+.margin {
+    margin-left: 25px;
+    margin-right: 25px;
 
-/* ヘッダー */
+    /* margin:auto; */
+}
 
 body {}
 
+.contents {
+    display: flex;
+    flex-flow: column;
+    margin: auto;
+    max-width: 1425px;
+    /* align-items: flex-start; */
+}
+
+/* ヘッダー */
 .header {
     height: 80px;
     display: flex;
@@ -157,8 +166,9 @@ li.item>a {
 
 
 .news_img {
-
+    min-height: 520px;
     width: 100%;
+    object-fit: cover;
 }
 
 .absolute {
@@ -181,27 +191,24 @@ li.item>a {
 
 .swiper-slide {
     background-color: white;
+    padding-top: 100px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 .swiper-slide .slide-content h1, .swiper-slide .slide-content h2, .swiper-slide .slide-content h3 {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: black;
     font-size: 30px;
     text-shadow: 2px 2px rgba(0, 0, 0, 0.3);
+    margin-bottom: 50px;
+    text-decoration: underline;
+    text-decoration-color: black;
 }
 
 .swiper-slide .slide-content p {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: black;
     text-shadow: .5px .5px rgba(0, 0, 0, 0.6);
-    margin: 0;
-    padding: 0;
+    margin-bottom: 25px;
     font-size: 18px;
 }
 
@@ -217,20 +224,43 @@ li.item>a {
 
 .swiper-button-prev, .swiper-button-next {
     position: relative;
+    height: 0px;
+    width: 40px;
 }
 
 .swiper-button-prev {
     left: 0px;
+    margin-right: 25px;
 }
 
 .swiper-button-next {
     right: 0px;
+    margin-left: 25px;
+}
+
+
+.swiper-button-prev::after, .swiper-button-next::after {
+    background-repeat: no-repeat;
+    background-size: contain;
+    content: "";
+    height: 40px;
+    margin: auto;
+    width: 40px;
+}
+
+.swiper-button-prev::after {
+    background-image: url("../img/prev.svg");
+}
+
+.swiper-button-next::after {
+    background-image: url("../img/next.svg");
+
 }
 
 .flex_box {
     display: flex;
     align-items: center;
-    margin:25px;
+    margin: 25px;
 }
 
 /* /スライドショー */
@@ -240,10 +270,7 @@ li.item>a {
 /* /news */
 
 /* 採用情報 */
-.recruit_area {
-    margin-left: 10%;
-    margin-right: 10%;
-}
+.recruit_area {}
 
 
 .recruit_area li {
@@ -275,33 +302,54 @@ li.item>a {
 
 .recruit_info {
     display: flex;
+    gap: 25px;
+    margin: auto;
+    justify-content: center;
 }
 
 .column {
-    width: 50%;
+    display: flex;
+    flex-flow: column;
+    gap: 25px;
 }
 
 .treatment {
-    margin: 25px;
     border-width: 2px;
-    border-color: #cccccc;
+    border-color: #F0F0F0;
+    max-width: 700px;
 }
 
 .title {
-    background-color: silver;
+    background-color: #F0F0F0;
     text-align: center;
-    padding: 10px;
+    padding: 25px;
     font-weight: 700;
 }
 
 .t_text {
-    padding: 10px;
+    padding: 25px;
 }
 
 .list {
     list-style: inside;
 }
 
+.t_text>p,.t_text>li{
+    line-height:200% ;
+}
+.t_text>li{
+    margin-left: 0;
+}
+
+.bold{
+    font-weight: 700;
+}
+.small{
+    font-size: 12px;
+}
+.para{
+    font-size: 15px;
+}
 
 
 
@@ -342,6 +390,10 @@ li.item>a {
 .flow_bar {
     display: flex;
     margin: auto;
+    margin-bottom: 25px;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
 
 }
 
@@ -350,7 +402,7 @@ li.item>a {
     display: inline-block;
     color: #333;
     text-decoration: none;
-    margin: 50px;
+    margin: 25px;
     text-align: center;
     /* height: 150px;
     width: 150px; */
@@ -358,7 +410,7 @@ li.item>a {
 
 }
 
-.folw_box::before {
+/* .folw_box::after {
     content: '';
     width: 0;
     height: 0;
@@ -368,16 +420,16 @@ li.item>a {
     position: absolute;
     top: 50%;
     margin-top: auto;
-    margin-left: 70%;
-}
+    left: 195px;
+} */
 
 
-.folw_box:last-child::before {
+/* .folw_box:last-child::after {
     display: none;
-}
+} */
 
 .step_background {
-    position: relative;
+    position: absolute;
     background-color: #d9a31d;
     border-radius: 50%;
     height: 50px;
@@ -386,8 +438,19 @@ li.item>a {
     justify-content: center;
     align-items: center;
     margin: auto;
+    left: 0;
+    right: 0;
     z-index: 2;
+    top: -25px;
 
+}
+
+.test555 {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent #000000;
 }
 
 .step {
@@ -404,26 +467,27 @@ li.item>a {
     position: relative;
     background-color: #ffe7ae;
     border-radius: 50%;
-    height: 150px;
-    width: 150px;
+    height: 200px;
+    width: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: -20%;
+    /* margin-top: -20%; */
     z-index: 1;
     flex-direction: column;
 
 }
 
 .svg {
-    width: 50%;
+    width: 40%;
     margin: auto;
 
 }
 
 .flow_text {
-    position: relative;
-    margin-top: -15%;
+    position: absolute;
+    /* margin-top: -15%; */
+    bottom: 10px;
     z-index: 2;
 }
 
@@ -433,6 +497,9 @@ li.item>a {
 /* 会社概要 */
 .corp_info {
     display: flex;
+    gap: 25px;
+    margin: auto;
+    justify-content: center;
 }
 
 .table {
@@ -453,8 +520,14 @@ th {
     background-color: #cccccc;
 }
 
+td{
+    vertical-align: middle;
+    line-height: 200%;
+}
+
 .right {
     text-align: center;
+    vertical-align: middle;
 }
 
 
@@ -466,6 +539,10 @@ iframe {
     width: 100%;
     height: 500px;
     border: 0;
+}
+
+.width {
+    width: 50%;
 }
 
 
@@ -491,8 +568,8 @@ iframe {
 
 .form {
     text-align: center;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 25px;
+    margin-right: 25px;
 
 }
 
@@ -506,16 +583,16 @@ iframe {
     border: 2px solid gray;
     width: 100%;
     height: 50px;
-    margin-top: 15px;
-    margin-bottom: 5px;
+    margin-top: 5px;
+    margin-bottom: 15px;
 }
 
 
 .message-input {
     border: 2px solid gray;
     width: 100%;
-    margin-top: 15px;
-    margin-bottom: 5px;
+    margin-top: 5px;
+    margin-bottom: 15px;
 }
 
 .Send-Button {
